--- a/.env
+++ b/.env
@@ -1,4 +1,9 @@
 TOKEN=тут должен быть токен бота
 DB_URL=sqlite+aiosqlite:///database_bot.db
-COL_QUESTIONS=9
-ADMIN_USER=[]
+COL_QUESTIONS=5
+ADMIN_USER=[""]
+
+MANAGER_NAME=Имя Менеджер
+MANAGER_EMAIL=email_manager@yandex.ru
+MANAGER_PHONE=+7-900-000-00-99
+MANAGER_TELEGRAM_ID=""
